--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "2.2.1",
   "dependencies": {
     "modernizr": "~2.6.2",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "pixel-pattern-generator": "~0.0.4"
   },
   "homepage": "http://ghostium.oswaldoacauan.com/",
   "authors": [
